--- a/index.html
+++ b/index.html
@@ -27,39 +27,39 @@
       </div>
       <div class="timeline-item bottom" onclick="openMemory(4)">
         <div class="preview"><img src="images/memory4_preview.jpg" alt="Preview"></div>
-        <div class="label">Oct 28</div>
+        <div class="label">Nov 24</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(5)">
         <div class="preview"><img src="images/memory5_preview.jpg" alt="Preview"></div>
-        <div class="label">Nov 11</div>
+        <div class="label">Dec 26</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(6)">
         <div class="preview"><img src="images/memory6_preview.jpg" alt="Preview"></div>
-        <div class="label">Dec 2</div>
+        <div class="label">Jan 2</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(7)">
         <div class="preview"><img src="images/memory7_preview.jpg" alt="Preview"></div>
-        <div class="label">Dec 25</div>
+        <div class="label">Jan-Apr</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(8)">
         <div class="preview"><img src="images/memory8_preview.jpg" alt="Preview"></div>
-        <div class="label">Jan 15</div>
+        <div class="label">Apr 26</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(9)">
         <div class="preview"><img src="images/memory9_preview.jpg" alt="Preview"></div>
-        <div class="label">Feb 14</div>
+        <div class="label">May 18</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(10)">
         <div class="preview"><img src="images/memory10_preview.jpg" alt="Preview"></div>
-        <div class="label">Mar 10</div>
+        <div class="label">May 31</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(11)">
         <div class="preview"><img src="images/memory11_preview.jpg" alt="Preview"></div>
-        <div class="label">Jul 20</div>
+        <div class="label">Jun 21</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(12)">
         <div class="preview"><img src="images/memory12_preview.jpg" alt="Preview"></div>
-        <div class="label">Aug 4</div>
+        <div class="label">Jul 17</div>
       </div>
     </div>
   </main>
