--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="preview"><img src="images/memory12_preview.jpg" alt="Preview"></div>
         <div class="label">Jul 17</div>
       </div>
-      <div class="timeline-item bottom" onclick="openMemory(13)">
+      <div class="timeline-item top" onclick="openMemory(13)">
         <div class="preview"><img src="images/memory13_preview.jpg" alt="Preview"></div>
         <div class="label">Aug 3</div>
       </div>
