--- a/memory4.html
+++ b/memory4.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memory 4</title>
+  <title>Austin/CAS</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Memory 4</h2>
+    <h2 class="memory-title">Austin/CAS</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
@@ -19,6 +19,8 @@
     <div class="masonry-item"><img src="images/memory4_1.jpg" alt="Memory 4"></div>
     <div class="masonry-item"><img src="images/memory4_2.jpg" alt="Memory 4"></div>
     <div class="masonry-item"><img src="images/memory4_3.jpg" alt="Memory 4"></div>
+    <div class="masonry-item"><img src="images/memory4_4.jpg" alt="Memory 4"></div>
+    <div class="masonry-item"><img src="images/memory4_5.jpg" alt="Memory 4"></div>
   </div>
 
   <audio id="bg-music" loop>
