--- a/memory6.html
+++ b/memory6.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memory 6</title>
+  <title>First Date  </title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Memory 6</h2>
+    <h2 class="memory-title">First Date</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
@@ -17,8 +17,6 @@
   <div class="masonry">
     <!-- Replace with actual memory 6 images -->
     <div class="masonry-item"><img src="images/memory6_1.jpg" alt="Memory 6"></div>
-    <div class="masonry-item"><img src="images/memory6_2.jpg" alt="Memory 6"></div>
-    <div class="masonry-item"><img src="images/memory6_3.jpg" alt="Memory 6"></div>
   </div>
 
   <audio id="bg-music" loop>
