--- a/memory12.html
+++ b/memory12.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memory 12</title>
+  <title>My Birthday</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Memory 12</h2>
+    <h2 class="memory-title">my Birthday</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
@@ -19,6 +19,9 @@
     <div class="masonry-item"><img src="images/memory12_1.jpg" alt="Memory 12"></div>
     <div class="masonry-item"><img src="images/memory12_2.jpg" alt="Memory 12"></div>
     <div class="masonry-item"><img src="images/memory12_3.jpg" alt="Memory 12"></div>
+    <div class="masonry-item"><img src="images/memory12_4.jpg" alt="Memory 12"></div>
+    <div class="masonry-item"><img src="images/memory12_5.jpg" alt="Memory 12"></div>
+    <div class="masonry-item"><img src="images/memory12_6.jpg" alt="Memory 12"></div>
   </div>
 
   <audio id="bg-music" loop>
