--- a/index.html
+++ b/index.html
@@ -39,33 +39,37 @@
       </div>
       <div class="timeline-item top" onclick="openMemory(7)">
         <div class="preview"><img src="images/memory7_preview.jpg" alt="Preview"></div>
-        <div class="label">Jan-Apr</div>
+        <div class="label">Feb 1</div>
       </div>
-      <div class="timeline-item bottom" onclick="openMemory(8)">
+      <div class="timeline-item top" onclick="openMemory(8)">
+        <div class="preview"><img src="images/memory7_preview.jpg" alt="Preview"></div>
+        <div class="label">Feb-Apr</div>
+      </div>
+      <div class="timeline-item bottom" onclick="openMemory(9)">
         <div class="preview"><img src="images/memory8_preview.jpg" alt="Preview"></div>
         <div class="label">Apr 26</div>
       </div>
-      <div class="timeline-item top" onclick="openMemory(9)">
+      <div class="timeline-item top" onclick="openMemory(10)">
         <div class="preview"><img src="images/memory9_preview.jpg" alt="Preview"></div>
         <div class="label">May 18</div>
       </div>
-      <div class="timeline-item bottom" onclick="openMemory(10)">
+      <div class="timeline-item bottom" onclick="openMemory(11)">
         <div class="preview"><img src="images/memory10_preview.jpg" alt="Preview"></div>
         <div class="label">May 31</div>
       </div>
-      <div class="timeline-item top" onclick="openMemory(11)">
+      <div class="timeline-item top" onclick="openMemory(12)">
         <div class="preview"><img src="images/memory11_preview.jpg" alt="Preview"></div>
         <div class="label">Jun 21</div>
       </div>
-      <div class="timeline-item bottom" onclick="openMemory(12)">
+      <div class="timeline-item bottom" onclick="openMemory(13)">
         <div class="preview"><img src="images/memory12_preview.jpg" alt="Preview"></div>
         <div class="label">Jul 17</div>
       </div>
-      <div class="timeline-item top" onclick="openMemory(13)">
+      <div class="timeline-item top" onclick="openMemory(14)">
         <div class="preview"><img src="images/memory13_preview.jpg" alt="Preview"></div>
         <div class="label">Aug 3</div>
       </div>
-      <div class="timeline-item bottom" onclick="openMemory(14)">
+      <div class="timeline-item bottom" onclick="openMemory(15)">
         <div class="preview"><img src="images/memory14_preview.jpg" alt="Preview"></div>
         <div class="label">Now!!!</div>
       </div>
