--- a/memory10.html
+++ b/memory10.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Family Beach Trip</title>
+  <title>Started Dating!!</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Family Beach Trip</h2>
+    <h2 class="memory-title">Started Dating!!!</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
     </div>
   </div>
   <div class="masonry">
-    <!-- Replace with actual memory 10 images -->
+    <!-- Replace with actual memory 9 images -->
     <div class="masonry-item"><img src="images/memory10_1.jpg" alt="Memory 10"></div>
     <div class="masonry-item"><img src="images/memory10_2.jpg" alt="Memory 10"></div>
     <div class="masonry-item"><img src="images/memory10_3.jpg" alt="Memory 10"></div>
