--- a/memory9.html
+++ b/memory9.html
@@ -3,22 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Started Dating!!</title>
+  <title>Prom</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Started Dating!!!</h2>
+    <h2 class="memory-title">Prom</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
     </div>
   </div>
   <div class="masonry">
-    <!-- Replace with actual memory 9 images -->
+    <!-- Replace with actual memory 8 images -->
     <div class="masonry-item"><img src="images/memory9_1.jpg" alt="Memory 9"></div>
     <div class="masonry-item"><img src="images/memory9_2.jpg" alt="Memory 9"></div>
     <div class="masonry-item"><img src="images/memory9_3.jpg" alt="Memory 9"></div>
+    <div class="masonry-item"><img src="images/memory9_4.jpg" alt="Memory 9"></div>
+    <div class="masonry-item"><img src="images/memory9_5.jpg" alt="Memory 9"></div>
   </div>
 
   <audio id="bg-music" loop>
