--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="label">Dec 26</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(6)">
-        <div class="preview"><img src="images/memory6_preview.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory6_1.jpg" alt="Preview"></div>
         <div class="label">Jan 2</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(7)">
