--- a/memory7.html
+++ b/memory7.html
@@ -8,7 +8,7 @@
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Face Times</h2>
+    <h2 class="memory-title">Second Date</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
