--- a/memory7.html
+++ b/memory7.html
@@ -19,6 +19,7 @@
     <div class="masonry-item"><img src="images/memory7_1.jpg" alt="Memory 7"></div>
     <div class="masonry-item"><img src="images/memory7_2.jpg" alt="Memory 7"></div>
     <div class="masonry-item"><img src="images/memory7_3.jpg" alt="Memory 7"></div>
+    <div class="masonry-item"><img src="images/memory7_4.jpg" alt="Memory 7"></div>
   </div>
 
   <audio id="bg-music" loop>
