--- a/memory8.html
+++ b/memory8.html
@@ -19,6 +19,9 @@
     <div class="masonry-item"><img src="images/memory8_1.jpg" alt="Memory 8"></div>
     <div class="masonry-item"><img src="images/memory8_2.jpg" alt="Memory 8"></div>
     <div class="masonry-item"><img src="images/memory8_3.jpg" alt="Memory 8"></div>
+    <div class="masonry-item"><img src="images/memory8_4.jpg" alt="Memory 8"></div>
+    <div class="masonry-item"><img src="images/memory8_5.jpg" alt="Memory 8"></div>
+    <div class="masonry-item"><img src="images/memory8_6.jpg" alt="Memory 8"></div>
   </div>
 
   <audio id="bg-music" loop>
