--- a/memory9.html
+++ b/memory9.html
@@ -21,6 +21,7 @@
     <div class="masonry-item"><img src="images/memory9_3.jpg" alt="Memory 9"></div>
     <div class="masonry-item"><img src="images/memory9_4.jpg" alt="Memory 9"></div>
     <div class="masonry-item"><img src="images/memory9_5.jpg" alt="Memory 9"></div>
+    <div class="masonry-item"><img src="images/memory9_6.jpg" alt="Memory 9"></div>
   </div>
 
   <audio id="bg-music" loop>
