--- a/memory13.html
+++ b/memory13.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gov Canyon State Park</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body class="memory-page">
+  <div class="memory-header">
+    <h2 class="memory-title">Gov Canyon State Park</h2>
+    <div class="controls">
+      <button class="btn" onclick="goHome()">Back</button>
+      <button class="btn" onclick="toggleMusic()">🎵</button>
+    </div>
+  </div>
+  <div class="masonry">
+    <!-- Replace with actual memory 11 images -->
+    <div class="masonry-item"><img src="images/memory13_1.jpg" alt="Memory 13"></div>
+    <div class="masonry-item"><img src="images/memory13_2.jpg" alt="Memory 13"></div>
+    <div class="masonry-item"><img src="images/memory13_3.jpg" alt="Memory 13"></div>
+    <div class="masonry-item"><img src="images/memory13_4.jpg" alt="Memory 13"></div>
+  </div>
 
+  <audio id="bg-music" loop>
+    <source src="music/memory13.mp3" type="audio/mp3">
+  </audio>
+
+  <script src="js/script.js"></script>
+</body>
+</html>
