--- a/index.html
+++ b/index.html
@@ -63,14 +63,18 @@
       </div>
       <div class="timeline-item bottom" onclick="openMemory(13)">
         <div class="preview"><img src="images/memory13_preview.jpg" alt="Preview"></div>
-        <div class="label">Jul 17</div>
+        <div class="label">Jun 29</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(14)">
         <div class="preview"><img src="images/memory14_preview.jpg" alt="Preview"></div>
-        <div class="label">Aug 3</div>
+        <div class="label">Jul 17</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(15)">
         <div class="preview"><img src="images/memory15_preview.jpg" alt="Preview"></div>
+        <div class="label">Aug 3</div>
+      </div>
+      <div class="timeline-item top" onclick="openMemory(16)">
+        <div class="preview"><img src="images/memory16_preview.jpg" alt="Preview"></div>
         <div class="label">Now!!!</div>
       </div>
     </div>
