--- a/memory14.html
+++ b/memory14.html
@@ -22,6 +22,8 @@
     <div class="masonry-item"><img src="images/memory14_4.jpg" alt="Memory 13"></div>
     <div class="masonry-item"><img src="images/memory14_5.jpg" alt="Memory 13"></div>
     <div class="masonry-item"><img src="images/memory14_6.jpg" alt="Memory 13"></div>
+    <div class="masonry-item"><img src="images/memory14_7.jpg" alt="Memory 13"></div>
+    <div class="masonry-item"><img src="images/memory14_8.jpg" alt="Memory 13"></div>
   </div>
 
   <audio id="bg-music" loop>
