--- a/memory15.html
+++ b/memory15.html
@@ -19,6 +19,12 @@
     <div class="masonry-item"><img src="images/memory15_1.jpg" alt="Memory 14"></div>
     <div class="masonry-item"><img src="images/memory15_2.jpg" alt="Memory 14"></div>
     <div class="masonry-item"><img src="images/memory15_3.jpg" alt="Memory 14"></div>
+    <div class="masonry-item"><img src="images/memory15_4.jpg" alt="Memory 14"></div>
+    <div class="masonry-item"><img src="images/memory15_5.jpg" alt="Memory 14"></div>
+    <div class="masonry-item"><img src="images/memory15_6.jpg" alt="Memory 14"></div>
+    <div class="masonry-item"><img src="images/memory15_7.jpg" alt="Memory 14"></div>
+    <div class="masonry-item"><img src="images/memory15_8.jpg" alt="Memory 14"></div>
+    <div class="masonry-item"><img src="images/memory15_9.jpg" alt="Memory 14"></div>
   </div>
 
   <audio id="bg-music" loop>
