--- a/memory16.html
+++ b/memory16.html
@@ -17,8 +17,8 @@
 
   <div class="final-message">
     <p>
-      Three months already — and each day has been better than the last.  
-      I appretiate you putting up with my bs. Thank you for everything 💖
+      Its been a short three months already, yet each day has been better than the last.  
+      I appretiate you putting up with my bs and difficulties. Thank you for everything 💖
       Here's to 3 more happy months 😘
     </p>
   </div>
